--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Tradovate API Documentation
+description: The official documentation for the Tradovate API. Let's build together!
 theme: just-the-docs
 
 logo: "/assets/images/tradovate-negative.svg"
